more modernizing. Added more youtube to songs page

--- a/Index.html
+++ b/Index.html
@@ -22,11 +22,10 @@
 	<div class="row">
 		<div class="col-sm-12">
 			<a href="index.html"><img src="images/header.jpg" border=0></a>
-			<hr>
 		</div>
 	</div>
 
-	<div class="row">
+	<div class="row ">
 		<div class="menu">
 			<ul>
 				<li><a href="songs.html">Songs</a></li>
@@ -34,11 +33,10 @@
 				<li><a href="photos.html">Photos</a></li>
 				<li><a href="story.html">Story</a></li>
 			</ul>
-			<hr>
 		</div>
 	</div>
 
-	<div class="row ">
+	<div class="row intro">
 		<div class="col-sm-0 col-md-3"></div>
 		<div class="about col-sm-12 col-md-3">
 			<p>Welcome to the website! Have a look around for information on my music and some backstory.</p>
@@ -46,13 +44,13 @@
 			<p>My Song 'Joseph and Mary in a Stable and a Baby Boy' is currently in rotation on <a href="http://christmassongsradio.com/" target='new'>Christmas Songs Radio</a>. Head over to the <a href="songs.html">songs page</a> to listen.</p>
 		</div>
 		<div class="slideshow col-sm-12 col-md-3">
-			<img src="images/mike1.jpg"></h2>
+			<img id="profile" src="images/mike1.jpg"></h2>
 		</div>
 		<div class="col-sm-0 col-md-3"></div>
 	</div>
 	
 
-	<div class="row">
+	<div class="row social">
 		<div class="col-sm-6 facebook">
 			<a href="https://www.facebook.com/pages/Cariello/439631496154106?ref=hl" target='new'><img src="images/fb_icon.jpg" title="Facebook" border=0></a>
 		</div>
