--- a/photos.html
+++ b/photos.html
@@ -1,68 +1,41 @@
 <html>
 <head>
 <title>Mike Cariello</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+
+	<script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
+
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 </head>
 
+<body>
 
-<script language="JavaScript" type="text/JavaScript">
-<!--
-function MM_swapImgRestore() { //v3.0
-  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
-}
+<div class="container">
 
-function MM_preloadImages() { //v3.0
-  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
-    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
-    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
-}
+	<div class="row">
+		<div class="col-sm-12">
+			<a href="index.html"><img src="images/header.jpg" border=0></a>
+		</div>
+	</div>
 
-function MM_findObj(n, d) { //v4.01
-  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
-    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
-  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
-  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
-  if(!x && d.getElementById) x=d.getElementById(n); return x;
-}
-
-function MM_swapImage() { //v3.0
-  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
-   if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
-}
-//-->
-</script>
+	<div class="row">
+		<div class="menu">
+			<ul>
+				<li><a href="songs.html">Songs</a></li>
+				<li><a href="projects.html">Projects</a></li>
+				<li><a href="photos.html">Photos</a></li>
+				<li><a href="story.html">Story</a></li>
+			</ul>
+		</div>
+	</div>
 
 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"></head>
-<body onLoad="MM_preloadImages('images/songs-on.jpg','images/features-on.jpg,'images/schedule-on.jpg','images/story-on.jpg','images/photos-on.jpg','images/projects-on.jpg','images/contacts-on.jpg')">
-
-<body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" bgcolor="#fafafa">
-<center>
-<table cellpadding=0 cellspacing=0 width=700>
-
-<tr>
-
-<td bgcolor=FAFAFA valign="top" colspan=6><center><a href="index.html"><img src="images/header.jpg" border=0></a></h2></td></tr>
-
-
-
-<tr>
-<td valign="top"><img src="images/buffer.jpg"</td>
-
-<td valign="top"><a href="songs.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image12','','images/songs-on.jpg',1)"><img src="images/songs.jpg" name="Image12" border="0"></a></td>
-
-<td valign="top"><a href="projects.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image17','','images/projects-on.jpg',1)"><img src="images/projects.jpg" name="Image17" border="0"></a></td>
-
-<td valign="top"><img src="images/photos-on.jpg"></td>
-
-<td valign="top"><a href="story.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image15','','images/story-on.jpg',1)"><img src="images/story.jpg" name="Image15" border="0"></a></td>
-
-
-
-<td valign="top"><img src="images/buffer2.jpg"</td>
-
-
-
-</tr>
 
 <tr>
 
@@ -86,28 +59,19 @@ function MM_swapImage() { //v3.0
 <img src="images/Classic_2.jpg" height=415 width=600><Br><Br>
 <img src="images/Classic_3.jpg" height=402 width=600><Br><Br>
 <img src="images/Classic_4.jpg" height=864 width=600><Br><Br>
-<hr>
 
 
 
 
-
-<Br><Br>
-
-</td>
-
-</tr>
-
-<tr><Td colspan=6>
-
-<font face='arial'><center><Br>
-
-<a href="https://www.facebook.com/pages/Cariello/439631496154106?ref=hl" target='new'><img src="images/fb_icon.jpg" border=0></a>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="mailto:MikeCarielloMusic@gmail.com?subject=MikeCariello.com"><img src="images/mail_icon.jpg" border=0></a>
-
-</td></tr>
-</table>
+	<div class="row social">
+		<div class="col-sm-6 facebook">
+			<a href="https://www.facebook.com/pages/Cariello/439631496154106?ref=hl" target='new'><img src="images/fb_icon.jpg" title="Facebook" border=0></a>
+		</div>
+		<div class="col-sm-6 contact">
+			<a href="mailto:MikeCarielloMusic@gmail.com?subject=MikeCariello.com"><img src="images/mail_icon.jpg" title="contact" border=0></a>
+		</div>
+	</div>
+</div>
 
 </body>
 </html>
