added bootstrap navbar to each page, media queries, fixed styling, started working on picture gallery

--- a/Index.html
+++ b/Index.html
@@ -1,143 +1,150 @@
 <html>
-<head>
-	<title>Mike Cariello</title>
+  <head>
+  	<title>Mike Cariello</title>
 
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+  	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+  	
+  	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
-	<script   src="https://code.jquery.com/jquery-3.1.0.min.js" crossorigin="anonymous"></script>
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"  crossorigin="anonymous">
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"  crossorigin="anonymous">
+  	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+  	<script src="https://code.jquery.com/jquery-3.1.0.min.js" crossorigin="anonymous"></script>
 
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
 
-</head>
+  </head>
 
-<body>
+  <body>
 
-<div class="container">
-<div class="row">
-  <div class="col-xs-12">
-    <a class="logo" href="index.html"><img src="media/images/header.jpg" border=0></a>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <a class="logo" href="index.html"><img src="media/images/header.jpg" border=0></a>
+        </div>
+      </div>
+
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="photos.html">Photos</a></li>
+              <li><a href="story.html">Story</a></li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+
+
+    	<div class="row intro">
+        <!-- steal space -->
+    		<div class="col-xs-0 col-sm-1 introSpacer"></div>
+    		
+        <div class="col-xs-12 col-sm-5">
+          <div class="about">
+      			<p>Welcome to the website! Have a look around for information on my music and some backstory.
+        	  You can purchase on <a href="https://itunes.apple.com/us/album/joseph-mary-in-stable-baby/id731031511" target='new'>iTunes</a> or on <a href="http://www.amazon.com/Joseph-Mary-Stable-Baby-Boy/dp/B00G489LT8" target='new'>Amazon</a>.</p>
+          </div>
+        </div>
+
+    		<div class="col-xs-12 col-sm-5">
+    			<img id="profile" src="media/images/mike1.jpg"></h2>
+    		</div>
+
+      	<div class="col-xs-0 col-sm-1 introSpacer"></div>
+      </div>
+
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active row">
+            <div class="col-xs-3"></div>
+        		<div class="col-xs-6">
+              <p>Joseph & Mary in a Stable and a Baby Boy</p>
+          		<iframe width="100%" height="315" scrolling="no" frameborder="no" src="http://www.reverbnation.com/widget_code/html_widget/artist_3614294?widget_id=50&pwc[design]=default&pwc[included_songs]=0&pwc[song_ids]=18609598&pwc[photo]=0"></iframe>
+            </div>
+            <div class="col-xs-3"></div>
+          </div>
+
+          <div class="item">
+            <div class="col-xs-3"></div>
+            <div class="col-xs-6">
+            	<p>'If It Was Easy'</p>
+            	<iframe width="420" height="315" src="http://www.youtube.com/embed/kSmWEMjRTVk" frameborder="0" allowfullscreen></iframe>
+            </div>
+      	  </div>
+
+          <div class="item">
+            <div class="col-xs-3"></div>
+            <div class="col-xs-6">
+          		<p>'I Don't Know How To Cry'</p>
+          		<iframe width="420" height="315" src="https://www.youtube.com/embed/_aGIgcthopI" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="col-xs-3"></div>
+            <div class="col-xs-6">
+              <p>'I'm Losing You'</p>
+          		<iframe width="420" height="315" src="https://www.youtube.com/embed/tK5DH8Cu5EU" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+
+      	<div id="carouselButtons">
+      	    <button id="playButton" type="button" class="btn btn-default btn-md">
+      	        <span class="glyphicon glyphicon-play" ALT="Click here to resume the slideshow"></span>
+      	     </button>
+      	    <button id="pauseButton" type="button" class="btn btn-default btn-md">
+      	        <span class="glyphicon glyphicon-pause" ALT="Click here to pause the slideshow"></span>
+      	    </button>
+      	</div>
+
+      </div>
+
+
+      	
+
+    	<div class="row social">
+    		<div class="col-sm-6 facebook">
+    			<a href="https://www.facebook.com/pages/Cariello/439631496154106?ref=hl" target='new'><img src="media/images/fb_icon.jpg" title="Facebook" border=0></a>
+    		</div>
+    		<div class="col-sm-6 contact">
+    			<a href="mailto:MikeCarielloMusic@gmail.com?subject=MikeCariello.com"><img src="media/images/mail_icon.jpg" title="contact" border=0></a>
+    		</div>
+    	</div>
     </div>
-  </div>
 
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="photos.html">Photos</a></li>
-        <li><a href="story.html">Story</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
-
-	<div class="row intro">
-    <!-- steal space -->
-		<div class="col-sm-0 col-md-3"></div>
-		
-    <div class="about col-sm-12 col-md-3">
-			<p>Welcome to the website! Have a look around for information on my music and some backstory.</p>
-  	</div>
-
-
-		<div class="slideshow col-sm-12 col-md-3">
-			<img id="profile" src="media/images/mike1.jpg"></h2>
-		</div>
-		<div class="col-sm-0 col-md-3"></div>
-	</div>
-
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-    <li data-target="#myCarousel" data-slide-to="3"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-  		<p>My Song 'Joseph and Mary in a Stable and a Baby Boy' is currently in rotation on Christmas Songs Radio. You can purchase on <a href="https://itunes.apple.com/us/album/joseph-mary-in-stable-baby/id731031511" target='new'>iTunes</a> or on <a href="http://www.amazon.com/Joseph-Mary-Stable-Baby-Boy/dp/B00G489LT8" target='new'>Amazon</a></p>
-  		<iframe width="100%" height="360" scrolling="no" frameborder="no" src="http://www.reverbnation.com/widget_code/html_widget/artist_3614294?widget_id=50&pwc[design]=default&pwc[included_songs]=0&pwc[song_ids]=18609598&pwc[photo]=0"></iframe>
-      <Br/>Like this on Facebook<Br/>
-      Share this on Facebook
-    </div>
-
-    <div class="item">
-      	<p>The first track off of my debut album, 'If It Was Easy' can be enjoyed on Youtube.</p>
-      	<iframe width="420" height="315" src="http://www.youtube.com/embed/kSmWEMjRTVk" frameborder="0" allowfullscreen></iframe>
-        <Br/>Like this on Facebook<Br/>
-        Share this on Facebook
-	</div>
-
-    <div class="item">
-  		<p>I Don't Know How To Cry</p>
-  		<iframe width="420" height="315" src="https://www.youtube.com/embed/_aGIgcthopI" frameborder="0" allowfullscreen></iframe>
-      <Br/>Like this on Facebook<Br/>
-      Share this on Facebook
-    </div>
-
-    <div class="item">
-  		<p>I'm Losing You</p>
-  		<iframe width="420" height="315" src="https://www.youtube.com/embed/tK5DH8Cu5EU" frameborder="0" allowfullscreen></iframe>
-      <Br/>Like this on Facebook<Br/>
-      Share this on Facebook
-    </div>
-  </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-
-	<div id="carouselButtons">
-	    <button id="playButton" type="button" class="btn btn-default btn-xs">
-	        <span class="glyphicon glyphicon-play"></span>
-	     </button>
-	    <button id="pauseButton" type="button" class="btn btn-default btn-xs">
-	        <span class="glyphicon glyphicon-pause"></span>
-	    </button>
-	</div>
-
-
-</div>
-
-
-	
-
-	<div class="row social">
-		<div class="col-sm-6 facebook">
-			<a href="https://www.facebook.com/pages/Cariello/439631496154106?ref=hl" target='new'><img src="media/images/fb_icon.jpg" title="Facebook" border=0></a>
-		</div>
-		<div class="col-sm-6 contact">
-			<a href="mailto:MikeCarielloMusic@gmail.com?subject=MikeCariello.com"><img src="media/images/mail_icon.jpg" title="contact" border=0></a>
-		</div>
-	</div>
-</div>
-
-</body>
+  </body>
 </html>
