--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,8 @@
 
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
 
+    <script src="assets/scripts/scripts.js" ></script>
+
   </head>
 
   <body>
@@ -24,9 +26,9 @@
         </div>
       </div>
 
-      <nav class="navbar navbar-default">
+<!--       <nav class="navbar navbar-default">
         <div class="container-fluid">
-          <!-- Brand and toggle get grouped for better mobile display -->
+
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
@@ -36,7 +38,6 @@
             </button>
           </div>
 
-          <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
               <li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
@@ -44,9 +45,9 @@
               <li><a href="photos.html">Photos</a></li>
               <li><a href="story.html">Story</a></li>
             </ul>
-          </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-      </nav>
+          </div>
+        </div>
+      </nav> -->
 
 
     	<div class="row intro">
@@ -67,6 +68,12 @@
       	<div class="col-xs-0 col-sm-1 introSpacer"></div>
       </div>
 
+      <div class="row title">
+        <div class="col-xs-12">
+          <p class="titleText">Media</p>
+        </div>
+      </div>
+
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -82,7 +89,15 @@
             <div class="col-xs-3"></div>
         		<div class="col-xs-6">
               <p>Joseph & Mary in a Stable and a Baby Boy</p>
-          		<iframe width="100%" height="315" scrolling="no" frameborder="no" src="http://www.reverbnation.com/widget_code/html_widget/artist_3614294?widget_id=50&pwc[design]=default&pwc[included_songs]=0&pwc[song_ids]=18609598&pwc[photo]=0"></iframe>
+              <div class="row">
+                <div class="col-xs-12">
+                  <p><a href="https://itunes.apple.com/us/album/joseph-mary-in-stable-baby/id731031511" target='new'>iTunes</a></p>
+                </div>
+                <!--<div class="col-xs-6">
+                  <p><a href="http://www.amazon.com/Joseph-Mary-Stable-Baby-Boy/dp/B00G489LT8" target='new'>Amazon</a></p>
+                </div> -->
+              </div>
+          		<iframe width="100%" height="300" scrolling="no" frameborder="no" src="http://www.reverbnation.com/widget_code/html_widget/artist_3614294?widget_id=50&pwc[design]=default&pwc[included_songs]=0&pwc[song_ids]=18609598&pwc[photo]=0"></iframe>
             </div>
             <div class="col-xs-3"></div>
           </div>
@@ -133,18 +148,83 @@
 
       </div>
 
+      <div class="row title">
+        <div class="col-xs-12">
+          <p class="titleText">Photo Gallery</p>
+        </div>
+      </div>
 
-      	
+      <div class="row imageGallery">
+        <div class="col-xs-4 col-md-3 imageDiv">
+          <img  src="media/images/Mike_Fall_2012_2.jpg" 
+                class="thumbnail modalTrigger" 
+                data-id="1" 
+                alt="Ringwood, NJ Hunger Walk, Fall 2012">
+        </div>
+        <div class="col-xs-4 col-md-3 imageDiv">
+          <img src="media/images/Mike_Fall_2012_1.jpg" class="thumbnail modalTrigger" alt="Ringwood, NJ Hunger Walk, Fall 2012">
+        </div>
+        <div class="col-xs-4 col-md-3 imageDiv">
+          <img src="media/images/Mike_6.jpg" class="thumbnail modalTrigger" alt="Ringwood, NJ Hunger Walk, Fall 2011">
+        </div>
+        <div class="col-xs-4 col-md-3 imageDiv">
+          <img src="media/images/Mike_3.jpg" class="thumbnail modalTrigger" alt="Ringwood, NJ Hunger Walk, Fall 2011">
+        </div>
+        <div class="col-xs-4 col-md-3 imageDiv">
+          <img src="media/images/Mike_Practice.jpg" class="thumbnail modalTrigger" alt="Practice Sessions">
+        </div>
+        <div class="col-xs-4 col-md-3 imageDiv">
+          <img src="media/images/Mike_Xmas_2011.jpg" class="thumbnail modalTrigger" alt="Practice Sessions">
+        </div>
+        <div class="col-xs-4 col-md-3 imageDiv">
+          <img src="media/images/Classic_1.jpg" class="thumbnail modalTrigger" alt="Classics">
+        </div>
+        <div class="col-xs-4 col-md-3 imageDiv">
+          <img src="media/images/Classic_2.jpg" class="thumbnail modalTrigger" alt="Classics">
+        </div>
+        <div class="col-xs-4 col-md-3 imageDiv">
+          <img src="media/images/Classic_3.jpg" class="thumbnail modalTrigger" alt="Classics">
+        </div>
+        <div class="col-xs-4 col-md-3 imageDiv">
+          <img src="media/images/Classic_4.jpg" class="thumbnail modalTrigger" alt="Classics">
+        </div>
+      </div>
 
-    	<div class="row social">
-    		<div class="col-sm-6 facebook">
-    			<a href="https://www.facebook.com/pages/Cariello/439631496154106?ref=hl" target='new'><img src="media/images/fb_icon.jpg" title="Facebook" border=0></a>
-    		</div>
-    		<div class="col-sm-6 contact">
-    			<a href="mailto:MikeCarielloMusic@gmail.com?subject=MikeCariello.com"><img src="media/images/mail_icon.jpg" title="contact" border=0></a>
-    		</div>
-    	</div>
+      <div class="row title">
+        <div class="col-xs-12">
+          <p class="titleText">Contact Me</p>
+        </div>
+      </div>
+
+      <div class="row social">
+        <div class="col-xs-6 facebook">
+          <a href="https://www.facebook.com/pages/Cariello/439631496154106?ref=hl" target='new'><img src="media/images/fb_icon.jpg" title="Facebook" border=0></a>
+        </div>
+        <div class="col-xs-6 contact">
+          <a href="mailto:MikeCarielloMusic@gmail.com?subject=MikeCariello.com"><img src="media/images/mail_icon.jpg" title="contact" border=0></a>
+        </div>
+      </div>
+
+    <div class="row copyright">
+      <div class="col-xs-12">
+        &copy;2017
+      </div>
     </div>
 
+    <div class="modal fade" id="modal-7">
+        <div class="modal-admin">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Dynamic Content</h4>
+                </div>
+
+                <div class="modal-body">
+                    Content is loading...
+                </div>
+            </div>
+        </div>
+    </div>
   </body>
 </html>
