--- a/photos.html
+++ b/photos.html
@@ -9,9 +9,11 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"  crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
-	<script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.1.0.min.js" crossorigin="anonymous"></script>
 
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
+
+  <script src="assets/scripts/scripts.js" ></script>
 
 </head>
 
@@ -48,51 +50,69 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-
-    <div class="row">
-      <div class="col-xs-4 col-sm-3 imageDiv">
-        <img src="media/images/Mike_Fall_2012_2.jpg" class="thumbnail" alt="Ringwood, NJ Hunger Walk, Fall 2012">
+    <div class="row imageGallery">
+      <div class="col-xs-4 col-md-3 imageDiv">
+        <img  src="media/images/Mike_Fall_2012_2.jpg" 
+              class="thumbnail modalTrigger" 
+              data-id="1" 
+              alt="Ringwood, NJ Hunger Walk, Fall 2012">
       </div>
-      <div class="col-xs-4 col-sm-3 imageDiv">
-        <img src="media/images/Mike_Fall_2012_1.jpg" class="thumbnail" alt="Ringwood, NJ Hunger Walk, Fall 2012">
+      <div class="col-xs-4 col-md-3 imageDiv">
+        <img src="media/images/Mike_Fall_2012_1.jpg" class="thumbnail modalTrigger" alt="Ringwood, NJ Hunger Walk, Fall 2012">
       </div>
-      <div class="col-xs-4 col-sm-3 imageDiv">
-        <img src="media/images/Mike_6.jpg" class="thumbnail" alt="Ringwood, NJ Hunger Walk, Fall 2011">
+      <div class="col-xs-4 col-md-3 imageDiv">
+        <img src="media/images/Mike_6.jpg" class="thumbnail modalTrigger" alt="Ringwood, NJ Hunger Walk, Fall 2011">
       </div>
-      <div class="col-xs-4 col-sm-3 imageDiv">
-        <img src="media/images/Mike_3.jpg" class="thumbnail" alt="Ringwood, NJ Hunger Walk, Fall 2011">
+      <div class="col-xs-4 col-md-3 imageDiv">
+        <img src="media/images/Mike_3.jpg" class="thumbnail modalTrigger" alt="Ringwood, NJ Hunger Walk, Fall 2011">
       </div>
-      <div class="col-xs-4 col-sm-3 imageDiv">
-        <img src="media/images/Mike_Practice.jpg" class="thumbnail" alt="Practice Sessions">
+      <div class="col-xs-4 col-md-3 imageDiv">
+        <img src="media/images/Mike_Practice.jpg" class="thumbnail modalTrigger" alt="Practice Sessions">
       </div>
-      <div class="col-xs-4 col-sm-3 imageDiv">
-        <img src="media/images/Mike_Xmas_2011.jpg" class="thumbnail" alt="Practice Sessions">
+      <div class="col-xs-4 col-md-3 imageDiv">
+        <img src="media/images/Mike_Xmas_2011.jpg" class="thumbnail modalTrigger" alt="Practice Sessions">
       </div>
-      <div class="col-xs-4 col-sm-3 imageDiv">
-        <img src="media/images/Classic_1.jpg" class="thumbnail" alt="Classics">
+      <div class="col-xs-4 col-md-3 imageDiv">
+        <img src="media/images/Classic_1.jpg" class="thumbnail modalTrigger" alt="Classics">
       </div>
-      <div class="col-xs-4 col-sm-3 imageDiv">
-        <img src="media/images/Classic_2.jpg" class="thumbnail" alt="Classics">
+      <div class="col-xs-4 col-md-3 imageDiv">
+        <img src="media/images/Classic_2.jpg" class="thumbnail modalTrigger" alt="Classics">
       </div>
-      <div class="col-xs-4 col-sm-3 imageDiv">
-        <img src="media/images/Classic_3.jpg" class="thumbnail" alt="Classics">
+      <div class="col-xs-4 col-md-3 imageDiv">
+        <img src="media/images/Classic_3.jpg" class="thumbnail modalTrigger" alt="Classics">
       </div>
-      <div class="col-xs-4 col-sm-3 imageDiv">
-        <img src="media/images/Classic_4.jpg" class="thumbnail" alt="Classics">
+      <div class="col-xs-4 col-md-3 imageDiv">
+        <img src="media/images/Classic_4.jpg" class="thumbnail modalTrigger" alt="Classics">
       </div>
     </div>
 
 
+  	<div class="row social">
+  		<div class="col-xs-6 facebook">
+  			<a href="https://www.facebook.com/pages/Cariello/439631496154106?ref=hl" target='new'><img src="media/images/fb_icon.jpg" title="Facebook" border=0></a>
+  		</div>
+  		<div class="col-xs-6 contact">
+  			<a href="mailto:MikeCarielloMusic@gmail.com?subject=MikeCariello.com"><img src="media/images/mail_icon.jpg" title="contact" border=0></a>
+  		</div>
+  	</div>
+  </div>
 
-	<div class="row social">
-		<div class="col-sm-6 facebook">
-			<a href="https://www.facebook.com/pages/Cariello/439631496154106?ref=hl" target='new'><img src="media/images/fb_icon.jpg" title="Facebook" border=0></a>
-		</div>
-		<div class="col-sm-6 contact">
-			<a href="mailto:MikeCarielloMusic@gmail.com?subject=MikeCariello.com"><img src="media/images/mail_icon.jpg" title="contact" border=0></a>
-		</div>
-	</div>
-</div>
+  <div class="modal fade" id="modal-7">
+      <div class="modal-admin">
+          <div class="modal-content">
+
+              <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                  <h4 class="modal-title">Dynamic Content</h4>
+              </div>
+
+              <div class="modal-body">
+                  Content is loading...
+              </div>
+          </div>
+      </div>
+  </div>
+
 
 </body>
 </html>
