hid top section temporarily

--- a/Index.html
+++ b/Index.html
@@ -50,23 +50,19 @@
       </nav> -->
 
 
-    	<div class="row intro">
-        <!-- steal space -->
+    <!-- 	<div class="row intro">
     		<div class="col-xs-0 col-sm-1 introSpacer"></div>
-    		
         <div class="col-xs-12 col-sm-5">
           <div class="about">
       			<p>Welcome to the website! Have a look around for information on my music and some backstory.
-        	  You can purchase on <a href="https://itunes.apple.com/us/album/joseph-mary-in-stable-baby/id731031511" target='new'>iTunes</a> or on <a href="http://www.amazon.com/Joseph-Mary-Stable-Baby-Boy/dp/B00G489LT8" target='new'>Amazon</a>.</p>
+        	  You can purchase on <a href="https://itunes.apple.com/us/album/joseph-mary-in-stable-baby/id731031511" target='new'>iTunes</a>.</p>
           </div>
         </div>
-
-    		<div class="col-xs-12 col-sm-5">
+     		<div class="col-xs-12 col-sm-5">
     			<img id="profile" src="media/images/mike1.jpg"></h2>
     		</div>
-
       	<div class="col-xs-0 col-sm-1 introSpacer"></div>
-      </div>
+      </div> -->
 
       <div class="row title">
         <div class="col-xs-12">
